--- a/BuildMonitor/App.xaml
+++ b/BuildMonitor/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="BuildMonitor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BuildMonitor"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views\MainWindow.xaml"
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
